syntax = "proto3";

package k8sapply;

option go_package = "waypoint/builtin/k8s/apply";

message Deployment {
  string prune_label = 1;
  repeated string prune_whitelist = 2;
}
